# adventure-timing

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
docs/: 01-choix-moteur.md  02-stack.md  03-architecture.md  04-roadmap.md  05-getting-started.md
docs/ui-prototypes/: components.html  index.html
examples/: gen_assets.rs  gen_audio.rs  gen_music.rs
site/: index.html  style.css
src/: audio.rs  camera.rs  effects.rs  enemies.rs  heroes.rs  items.rs  level.rs  main.rs  parallax.rs  physics.rs  player.rs  save.rs  states.rs  throwables.rs  ui.rs  weapons.rs  world.rs
