[package]
name = "adventure_timing"
version = "0.1.0"
edition = "2024"

[dependencies]
# gilrs (manette) désactivé : il dépend de libudev côté système, non
# installé ici. Pour le réactiver plus tard : sudo apt install libudev-dev,
# puis remettre "bevy_gilrs" dans la liste de features.
bevy = { version = "0.14", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "png",
    "vorbis",
    "x11",
    "dynamic_linking",
] }

# Compile dépendances en optimisé même en dev (gros gain de perf, surcoût
# de compilation payé une fois).
[profile.dev.package."*"]
opt-level = 3

# Garde notre crate en debug peu optimisé pour des rebuilds rapides.
[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
